# atlas-report

./: README.md  pyproject.toml
atlas_report/: __init__.py  executive.py  generator.py  json_renderer.py  markdown_renderer.py  pdf_renderer.py  report_data.py  scorer.py
tests/: __init__.py  test_pdf_renderer.py  test_report.py
